--- a/style.css
+++ b/style.css
@@ -1,18 +1,39 @@
-body {
-	background-color: grey;
+body, button {
+	background-color: #e2e2e2;
 }
 
-#top-window, #bottom-window {
+button {
+	float: right;
+}
+
+button img{
+	width: 50px;
+}
+
+#top-window {
 	background-color: white;
-	width: 90%;
+	width: 100%;
+	height: 200px;
+	overflow: scroll;
+}
+
+#bottom-window {
+	background-color: white;
+	width: 100%;
 	height: 100px;
 	overflow: scroll;
 }
 
 .sender-prompt {
 	color: red;
+	font-weight: bold;
 }
 
 .recipient-prompt {
 	color: blue;
+	font-weight: bold;
+}
+
+#bottom-bar {
+	margin-top: 20px;
 }
